--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<div class="accio" id="job">
+	<main class="accio" id="job">
 
 		<p class="hello-accio">Hello Accio Job</p>
-	</div>
+	</main>
 
 	
 </body>
